--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         
         <!-- Image and Date -->
         <div class="image-container">
-            <img src="https://via.placeholder.com/800x400" alt="Imagen de cámara">
+            <img src="https://i.postimg.cc/sxqkYQZv/Corporativo.jpg" alt="Imagen de cámara">
         </div>
     </div>
 
