--- a/index.html
+++ b/index.html
@@ -218,14 +218,14 @@
         function checkSearch() {
             var search = document.getElementById("search").value;
             if (search === "15/12/2024") {
-                window.location.href = "https://www.youtube.com"; // Redirigir a YouTube
+                window.location.href = "https://letrozma.github.io/Camaras/"; 
             }
         }
 
         function confirmSearch() {
             var search = document.getElementById("search").value;
             if (search === "15/12/2024") {
-                window.location.href = "https://www.youtube.com"; // Redirigir a YouTube
+                window.location.href = "https://letrozma.github.io/Camaras/";
             } else {
                 alert("Fecha no encontrada. Intenta de nuevo.");
             }
